# BigTalkDesignPattern

./: README.md
Appendix/: Animal.cpp  Animal.h  CMakeLists.txt  Cat.cpp  Cat.h  Cattle.cpp  Cattle.h  Dog.cpp  Dog.h  IChange.h  MachineCat.cpp  MachineCat.h  Monkey.cpp  Monkey.h  Sheep.cpp  Sheep.h  StoneMonkey.cpp  StoneMonkey.h  main.cpp  widget.cpp  widget.h  widget.ui
Chapter1/: CMakeLists.txt  OperationDiv.cpp  OperationDiv.h  OperationFactory.cpp  OperationFactory.h  OperationMul.cpp  OperationMul.h  OperationSub.h  main.cpp
Chapter10/: CMakeLists.txt  TestPaper.cpp  TestPaper.h  TestPaperA.h  TestPaperB.h  main.cpp
Chapter12/: CMakeLists.txt  Fund.cpp  Fund.h  Stocks.h  main.cpp
Chapter13/: Builder.h  CMakeLists.txt  ConcreteBuilder1.cpp  ConcreteBuilder1.h  ConcreteBuilder2.cpp  ConcreteBuilder2.h  Director.cpp  Director.h  Product.cpp  Product.h  main.cpp
Chapter14/: CMakeLists.txt
Chapter15/: CMakeLists.txt
Chapter16/: CMakeLists.txt
Chapter17/: CMakeLists.txt  Center.cpp  Center.h  ForeignCenter.cpp  ForeignCenter.h  Forwards.cpp  Forwards.h  Guards.cpp  Guards.h  Player.h  Translator.cpp  Translator.h  main.cpp
Chapter18/: CMakeLists.txt  GameRole.cpp  GameRole.h  RoleStateCaretaker.cpp  RoleStateCaretaker.h  RoleStateMemento.cpp  RoleStateMemento.h  main.cpp
Chapter19/: CMakeLists.txt
Chapter2/: CMakeLists.txt  CashContext.cpp  CashContext.h  CashNormal.cpp  CashNormal.h  CashRebate.cpp  CashRebate.h  CashReturn.cpp  CashReturn.h  CashSuper.h  widget.cpp  widget.h  widget.ui
Chapter20/: Aggregate.h  CMakeLists.txt  ConcreteAggregate.h  (+7 more)
(+152 files in other folders)
